web/bundles/lovethatfit/site/css/main.css
/* ... */
.int_fitting_room {
	
	width:364px;
	height:505px;
	margin:18px auto 0;
}
.input_file_hldr {
	float:left;
	background:url(../images/upload_file_inp.png) center 0 no-repeat;
	width:320px;
	position:relative;
	height:45px;
        padding-bottom: 10px;
}
.input_file_hldr input.input_file {
    cursor: pointer;
    height: 32px;
    opacity: 0;
    position: absolute;
    right: 20px;
    text-align: right;
    top: 6px;
    width: 280px;
    z-index: 200;
}
.input_file_hldr input.input_text {
	border: medium none;
    box-shadow: none;
    color: #A6A5A3;
    font-size: 15px;
    height: 20px;
    left: 28px;
    padding: 0;
    position: absolute;
    top: 13px;
    width: 205px;
    z-index: 100;
}

/*--Step 4 - Upload Profile Picture--*/
.upload_profile_pic {
	text-align:center;
	width:380px;
}

.step_4 .step_4_tip {
    left:-246px;
    top: 170px;
    width:200px;
}
.step_4 .tip .grad {
    width:200px;
    background-position: right top;
    margin-left: 0;
}
.step_4 .tip .tooltip_content {
    width:174px;
    line-height: 22px;
}

.fff_links a,
.fff_links a:visited {
	color:#fff;
	font-weight:normal;
	padding:4px;
}
.fff_links {
	text-align:center;
	color:#fff;
	font-size:12px;
	clear:both;
	display:block;
	font-weight:bold;
}
.upload_profile_pic .frm_ele {
	float:none !important;
}
.upload_profile_pic label {
	width:106px !important;
	float:left;
	padding:4px;
}
.closet_name {
	padding-top:16px;
}
.closet_name input {
	float:left;
}
.pic_thumb {
	padding-top:10px;
}
.pic_thumb img {
	border:1px solid #444;
	-webkit-box-shadow: -1px 0px 8px rgba(0, 0, 0, 0.7);
    -moz-box-shadow: -1px 0px 8px rgba(0, 0, 0, 0.7);
    box-shadow: -1px 0px 8px rgba(0, 0, 0, 0.7);
}


/*--Form--*/
input[type=password],
input[type=text],
input[type=email]{
	width:234px;
	padding:4px 7px;
	-webkit-box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.3);
    box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.3);
}
.lgn_blk input[type=submit] {
	background:url(../images/bg_top_rnd_btn.png) 0 0 no-repeat;
	padding:12px 0 15px;
	height:49px;
	width:141px;
	border:none;
	font-style:italic;
	font-size:16px;
	color:#fff;
}
.radio_buts label {
	padding-top:0;
}
.radio_buts div.radio_ele {
   display:inline-block;
   padding-top:2px;
   padding-left: 4px;
}
.radio_buts div.radio_ele label {
	width:auto !important;
	padding: 0 16px 0 0;
        float:left;
}
.radio_buts div.radio_ele input {
	margin-right:4px;
        border:none;
        background: none;
        float: left;
}
.play_area {
	width:364px;
	height:505px;
	overflow:hidden;
	position:relative;
        float:right;
        margin: 50px 140px 0px 0px;
       
        background:#fff;
        
        border:1px dotted #ccc;
        
        
}
.play_area .shade_frame {
    width:364px;
	height:505px;
	position:absolute;
        left:0;
        top:0
        -moz-box-shadow: inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow: inset 0 0 10px #000000;
}
#uploaded_photo {
	position:absolute;
	top:0;
	left:0;
	z-index:2000;
	display:block;
}
.img_hldr {
	text-align:center;
	padding:4px;
}
#dummy_mark {
	width:364px;
	height:505px;
	position:absolute;
	top:0;
	left:0;
	/*background:url(../images/dummy_mark.png) center 0 no-repeat;
	background:url(../images/fitting_room_see_thr_2.png) center 0 no-repeat;*/
}
#top_layer {
	position:absolute;
	left:0;
	top:0;
	z-index:3000;
	width:364px;
	height:505px;
	
}
.low_opacity {
	opacity:1;
	filter:alpha(opacity=100); /* For IE8 and earlier */
}
.full_opacity {
	opacity:1;
	filter:alpha(opacity=100); /* For IE8 and earlier */
}
.put_me_top {
	z-index:4000;
	display:block;
}
.play_area_hldr {
	
	
	height:505px;
	margin-left:8px;
}

#cnv_img_crop {
	z-index:6000;
	display:none;
	position:absolute;
	left:-400px;
	top:130px;
}
.z oom_in {
	display:none;
}

/*--Tips--*/

.show_my_tip,
/*.tip {
	display:none;
	background:#ffcc00;
	color:#000;
	position:absolute;
	top:-20px;
	left:-300px;
	border:1px solid #eee;
}
*/


.tip{
	/*background: rgb(73,81,57);
	background: -moz-linear-gradient(top, rgba(73,81,57,1) 0%, rgba(48,53,38,1) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(73,81,57,1)), color-stop(100%,rgba(48,53,38,1)));
	background: -webkit-linear-gradient(top, rgba(73,81,57,1) 0%,rgba(48,53,38,1) 100%);
	background: -o-linear-gradient(top, rgba(73,81,57,1) 0%,rgba(48,53,38,1) 100%);
	background: -ms-linear-gradient(top, rgba(73,81,57,1) 0%,rgba(48,53,38,1) 100%);
	background: linear-gradient(to bottom, rgba(73,81,57,1) 0%,rgba(48,53,38,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#495139', endColorstr='#303526',GradientType=0 );*/
	opacity:0.90;
	display:none;
	background:#222;
    filter:alpha(opacity=90); /* For IE8 and earlier */	
	position:absolute;
	top:-20px;
	left:-300px;
	color:#fff;
	font-family:Arial, Helvetica, sans-serif;
	line-height:25px;	
	font-size:0.9em;
	border-left:5px solid #a3b31d;
	text-shadow:1px 2px 1px #000;
	text-align:center;	
	
}

.tip .tooltip_content{
	position:relative;	
	padding:15px;
	width:325px;
}

.tip .grad{
	background:url(../images/gra.png) no-repeat top right;
	width:304px;
	height:3px;
	margin-left:52px;	
}

.tt_arrow .arrow_top{
	background:url(../images/arrow.png) no-repeat;
	width:30px;
	height:29px;
	position:absolute;
	top:18px;
	right:360px;	
}

.tt_arrow .arrow_middle{
	background:url(../images/arrow.png) no-repeat;
	width:55px;
	height:37px;
	position:absolute;
	top:90px;
	right:-56px;	
}

.tt_arrow .arrow_bottom{
	background:url(../images/arrow.png) no-repeat;
	width:55px;
	height:37px;
	position:absolute;
	top:170px;
	right:-56px;	
}
/* ... */

